--- a/blog3.html
+++ b/blog3.html
@@ -19,6 +19,7 @@
             <a href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
             <a href="projects.html">Projects</a>
+			<a href="help.html">Help</a>
             <div style="float:right;" id="search"></div>
             <script src="search.js"></script>
             <div class="clearfix"></div>
@@ -28,7 +29,7 @@
         <div class="heading color002" id="home" style="font-size:50px;"><b>Blog dan Cerita</b></div>
 		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:250px; opacity:0.2; width:400px; rotate:10deg;" src="images/blog-icon.png">
         <p style="font-size:22px">
-            <b class="heading">Halaman 3 dari 3</b>
+            <b class="heading" style="font-weight:700;">Halaman 3 dari 3</b>
             <br><br>
             Inilah halaman Blog dan Cerita, dimana berisi cerita dan pengalaman saya yang pernah dirasakan. Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.
 			Inilah beberapa cerita dengan pengalamannya baik keluarga, teman, atau sendiri yang ada dan tertulis di blog ini.
@@ -67,7 +68,7 @@
     <script src="script.js"></script>
     <script src="blog-description.js"></script>
     <footer style="background-color:#404040; padding:10px; color:white;">
-        <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
+        <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
 		Terakhir diupdate: 14 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
