--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <a href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
             <a href="projects.html">Projects</a>
+			<a href="help.html">Help</a>
             <!-- <div class="openbtn" onclick="openSearch()"><img src="images/search-icon.png" width="10"></div> -->
             <div style="float:right;" id="search"></div>
             <script src="search.js"></script>
@@ -74,21 +75,25 @@
         Ini adalah program yang sudah Devan kerjakan, jumlahnya ada 8.<br>
         Semuanya berkaitan dengan Matematika dan program tersebut Devan kerjakan selama 3 tahun, selama Devan SMP.<br>
         <br>
-        Devan memakai python dalam mengerjakan semua program tersebut.<br>
+        Devan memakai bahasa pemrograman Python dalam mengerjakan semua program tersebut, beberapa diantarnya menggunakan Streamlit.<br>
         Selanjutnya, Devan sedang mencoba untuk membuat program HTML, agar lebih mudah dan lengkap.<br>
         Begitu juga program Geometri, Devan mencoba tanpa memakai streamlit.<br>
         <br>
-        Selain itu, ada <b>2 program</b> yang saat ini Devan ingin kembangkan yaitu:<br>
+        Selain itu, ada <b>2 program</b> yang saat ini Devan ingin kembangkan yaitu: (sudah lama)<br>
         - Program Equation Solver versi 5<br>
         - Program Geometri versi 1.6<br>
         <br>
-        Dan juga sedang mengembangkan halaman timeline dan updates.
+        Dan juga saya sedang mengembangkan halaman Help dan merapikan tampilan website ini.
         <br><br>
         Di halaman Hasil Karya sudah menambahkan <b>Canva</b>, <b>Google Form</b>, <b>Kumpulan Website</b>, dan <b>Hasil Karya Kelas 7</b>, sehingga versinya berubah menjadi v1.7.3.
         <br><br>
         Font untuk heading sudah berubah dari <b>Raleway</b> ke <b>Inter</b>, dan menunya sudah diperbaiki dan diperlengkap, sehingga versinya berubah menjadi v1.7.4.
 		<br><br>
 		Di versi 1.9, saya menggunakan Google Search Console supaya bisa mencari website saya dengan lebih mudah. Selain itu, di versi 1.9.1, ada fitur tema gelap dan pencarian (search) Google yang baru. Di versi selanjutnya, saya memeratakan tampilan website yang baru dan melengkapinya dengan gambar transparan supaya lebih menarik, serta memperlengkap halaman blog.
+		<br><br>
+		Selain itu, saya menambahkan link halaman yang baru, yaitu halaman Help. Di sisi lain, saya juga menghapus link <b>Fakta</b> dan <b>Portofolio</b>, karena berbagai alasan sebagai berikut:<br>
+		- Fakta: Disatukan menjadi halaman Blog, sehingga halaman Fakta diarsipkan<br>
+		- Portofolio: Dipindahkan link aksesnya di halaman Profil
         </p><br>
 
         <p class="heading color001" style="font-size:25px;">
@@ -108,7 +113,8 @@
         </ul><br>
         <!-- <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p> -->
         <!-- <p>Website baru: <b>Portofolio</b>, <b>Fakta dan Informasi</b>, dan <b>Blog dan Cerita</b></p> -->
-        <p>Website baru: <b>Updates</b>, <b>Timeline</b>, dan <b>Portofolio</b></p>
+        <!-- <p>Website baru: <b>Updates</b>, <b>Timeline</b>, dan <b>Portofolio</b></p> -->
+		<p>Website baru: <b>Help</b></p>
         <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
         <p class="heading color001" style="font-size:25px;">
             <b>Link yang akan datang:</b>&nbsp;
@@ -117,20 +123,19 @@
 		<img class="imginvert disappear unselectable" style="position:absolute; right:300px; margin-top:0px; opacity:0.2; width:250px;" src="images/laptop-icon-24.png">
         <ul>
             <!-- <li style="color:darkgreen"> -->
-			<li class="color006">
-                Pengukur (Python) - 
+            <li class="color006">Help (HTML) - Sedang dibuat - v1.9.4</li>
+			<li class="color006">Tes Kognitif dan Visual (HTML) - Sedang dibuat</li>
+			<li class="color007">Tanggal Matematika (HTML) - Mau dibuat</li>
+			<li class="color007">Kalkulator Peluang (HTML) - Mau dibuat</li>
+			<li class="color007">
+                Pengukur (HTML) - 
                 <div class="tooltip">
-                Sedang dibuat
+                Mau dibuat
                 <span class="tooltiptext">Sedang dibuat website nya</span>
+				- v1.10
                 </div>
             </li>
-            <li class="color006">Fakta dan Informasi (HTML) - Sedang dibuat</li>
-            <li class="color007">Foto dan Kenangan (HTML) - Mau dibuat</li>
-            <li class="color006">Pelajaran - Sedang dibuat</li>
-            <li class="color007">Labirin / Maze (Python) - Mau dibuat</li>
-            <li>Bangun 3 Dimensi (HTML & Python)</li>
-            <li>Kalkulator Sederhana (HTML) - <span class="color008">v1.8.1</span></li>
-            <li>Explore (HTML) - <span class="color008">v1.8.3</span></li>
+            <li>Bangun 3 Dimensi (HTML & Python) - v1.11</li>
         </ul><br>
         <p>Link luar terdiri dari beberapa link yang mungkin suka, dan terkait di halaman ini.</p>
         <p class="heading color001" style="font-size:25px;">
@@ -151,7 +156,7 @@
             <img class="imginvert" style="vertical-align:middle;" src="images/page.png" alt="Page icon" width="30">
         </p>
 		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:50px; opacity:0.2; width:250px;" src="images/page.png">
-        <p>Beberapa informasi dan deskripsi dalam masing-masing halaman</p>
+        <p>Beberapa informasi dan deskripsi dalam masing-masing halaman.</p>
         <!-- <p>
             Hitam: Sudah ada<br>
             Maroon: <span style="color:maroon;">Belum ada</span>
@@ -167,20 +172,12 @@
             </tr>
             <tr>
                 <td>Blog</td>
-                <td>Berisi cerita dan pengalaman, seperti perjalanan dan penghasilan.</td>
-            </tr>
-            <tr>
-                <td>Fakta</td>
-                <td>Berisi fakta-fakta yang menarik, seperti website lain, pemrograman, dan sejarah.</td>
+                <td>Berisi cerita dan pengalaman, seperti perjalanan dan penghasilan. Selain itu, berisi fakta-fakta yang menarik, seperti website lain, pemrograman, dan sejarah.</td>
             </tr>
             <tr>
                 <td>Profil</td>
-                <td>Berisi profil dan about me, tentang biografis dan kesukaannya. Terdapat juga daftar teman dan orang.</td>
-            </tr>
-            <tr>
-                <td>Portofolio</td>
-                <td>Berisi beberapa slide portofolio dan juga QR code.<br>
-                    Bisa dibaca dan nge-scan QR code nya.</td>
+				<!-- Terdapat juga daftar teman dan orang. -->
+                <td>Berisi profil dan about me, tentang biografis dan kesukaannya. Selain itu, juga ada portofolio yang berisi beberapa slide portofolio dan juga QR code, sehingga bisa dibaca dan nge-scan QR code nya.</td>
             </tr>
             <tr>
                 <td>Hasil Karya</td>
@@ -198,31 +195,38 @@
                 <td>Projects</td>
                 <td>Berisi proyek-proyek baik Python maupun HTML yang sudah pernah kita buat di website ini.</td>
             </tr>
+			<tr>
+                <td>Help</td>
+                <td>Berisi pertanyaan dan Q&A yang menarik dan berhubungan dengan website ini, serta juga pengetahuan dan caranya untuk memahami website ini.</td>
+            </tr>
         </table>
         <br>
 
         <p class="heading color009" style="font-size:25px;">
-            <b>Informasi halaman selanjutnya</b>&nbsp;
-            <img class="imginvert" style="vertical-align:middle;" src="images/page.png" alt="Page icon" width="30">
+            <b>Informasi website ini</b>&nbsp;
+            <img class="imginvert" style="vertical-align:middle;" src="images/internet-icon.png" alt="Internet icon" width="30">
         </p>
+		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; opacity:0.2; width:250px;" src="images/internet-icon.png">
+		<p>Untuk informasi selengkapnya akan ada di halaman Help.</p>
         <table>
             <tr>
-                <th style="width:400px;">Nama Halaman</th>
-                <th style="width:400px;">Informasi Halaman</th>
+                <th style="width:400px;">Nama Bagian</th>
+                <th style="width:400px;">Deskripsi</th>
             </tr>
             <tr>
-                <td>Pertanyaan - <span class="color008">v1.7.4</span></td>
-                <td>Berisi pertanyaan dan Q&A yang menarik dan berhubungan dengan website ini.</td>
+                <td>Website</td>
+                <td>Website ini dibuat dari Github dengan nama link utama "devandaniel9.github.io".</td>
             </tr>
             <tr>
-                <td>Guide - <span class="color008">v1.8</span></td>
-                <td>Berisi pengetahuan dan caranya untuk memahami website ini dan juga yang lainnya.</td>
+                <td>Versi</td>
+                <td>Versi sekarang bisa dilihat di bagian paling bawah.</td>
             </tr>
         </table>
-        <br>
 
-        <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
-        <br>
+        <!-- <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p> -->
+		
+		<br><br>
+		
         <!-- <hr style="height:2px; border-width:0; background-color:gray"> -->
         <!-- <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p> -->
         <!--
@@ -261,8 +265,8 @@
     <footer style="background-color:#404040; padding:10px; color:white">
         <!-- <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;"> -->
 		<p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 14 Desember 2025<br>
-        Version: 1.9.3<br>
+        Terakhir diupdate: 15 Desember 2025<br>
+        <span id="version">Version: 1.9.4</span><br>
         Copyright © 2025 by Devan
 		<!-- Terakhir diupdate: 30 Mei 2024<br>
         Version: 1.8.1<br>
