--- a/updates.html
+++ b/updates.html
@@ -20,6 +20,7 @@
             <a href="timeline.html">Timeline</a>
             <a class="page-selected" href="updates.html">Updates</a>
             <a href="projects.html">Projects</a>
+			<a href="help.html">Help</a>
             <div class="clearfix"></div>
         </div>
     </div>
@@ -114,7 +115,7 @@
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
-        <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
+        <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 1 Feb 2024<br>
 		Copyright © 2023 by Devan -->
 		Terakhir diupdate: 14 Desember 2025<br>
