--- a/timeline.html
+++ b/timeline.html
@@ -19,6 +19,7 @@
             <a class="page-selected" href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
             <a href="projects.html">Projects</a>
+			<a href="help.html">Help</a>
             <div style="float:right;" id="search"></div>
             <script src="search.js"></script>
             <div class="clearfix"></div>
@@ -166,7 +167,7 @@
     </div>
     <script src="script.js"></script>
     <footer style="background-color:#404040; padding:10px; color:white;">
-        <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
+        <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 26 Mei 2024<br> -->
         <!-- Terakhir diupdate: 25 April 2025<br> -->
 		Terakhir diupdate: 14 Desember 2025<br>
