--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
         Halaman Projects ini berisi kumpulan Project yang sudah dibuat sebelumnya, seperti program Streamlit, halaman website kecil, menghitung BMI, penghitung waktu, permainan, dan kumpulan animasi.
 		<br><br>
 		Ada juga beberapa program yang masih belum dimasukkan, jadi akan diperbanyak lagi isi websitenya.<br>
-		Di halaman ini terdapat 10 project nya, yang sudah ditampilkan di bawah ini:
+		Di halaman ini terdapat 12 project yang sudah ditampilkan di bawah ini:
         </p>
         <!-- <p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p> -->
         <p class="heading color003" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
