--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,7 @@
             <span>
                 <!-- <font color="#008000">Semarang</font>, <b>Batu Malang</b>-->
                 <br>
-                First, we departed from <div class="tooltip">Semarang<span class="tooltiptext" id="desc01"></span></div> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the <b>Batu Malang</b> square.
+                First, we departed from <div class="tooltip">Semarang<span class="tooltiptext" id="desc001"></span></div> to <div class="tooltip"><b>Batu Malang</b><span class="tooltiptext" id="desc002"></span></div> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the <b>Batu Malang</b> square.
                 The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there.
                 Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo.
                 At 1 am we got up and got ready to go by jeep. We had to get up very early because we had to catch the sunrise.
@@ -109,8 +109,8 @@
                 <b>Catatan:</b><br>
                 <!-- <ul><li> -->
                 - Batu Malang: Kota di Jawa Timur<br>
-                - Kata Coach di Eagle School, nanti akan berencana untuk retreat ke <b>Batu Malang</b>, untuk karya wisata.<br>
-                - Coach Dedie dan Nana sudah pergi ke Gunung Bromo di bulang Agustus, langit dan pemandangannya bagus.<br>
+                - Kata Coach di Eagle School, nanti akan berencana untuk retreat ke <b>Batu Malang</b>, untuk karya wisata, tapi telah dibatalkan dari pemerintah.<br>
+                - Coach Dedie dan Coach Nana sudah pergi ke Gunung Bromo di bulan Agustus, langit dan pemandangannya bagus.<br>
 				- Tempat Wisata ini dikunjungi tepatnya pada hari Senin, 18 Juni 2018.<br>
                 <br>
                 <b>Link:</b><br>
@@ -258,7 +258,8 @@
             <span style="font-size:23px;"><span class="color004"><b>Hari pertama</b></span> ~ <span class="color009"><b>Sabtu, 24 Juni 2017</b></span></span>
             <br><br>
             <!-- <span style="color:red">* Untuk sementara ini, foto ini diblur terlebih dahulu.</span><br><br> -->
-            Pada hari Sabtu, keluarga saya berangkat dulu dari Semarang ke Jogja naik mobil. Lalu ke bandara Adi Sucipto dengan kondisi yang rame-rame karena libur Lebaran, lalu naik pesawat selama 2 jam dari Jogja ke Bali. Akhirnya kita sampai ke Bali dengan kondisi yang selamat meskipun kondisinya ramai. Setelah itu, baru makan outdoor di dekat pantai, sebelum kita pesan hotel dan sempat foto-foto pemandangan di Bali (Gambar 5, 6).
+            Pada hari Sabtu, keluarga saya berangkat dulu dari Semarang ke Jogja naik mobil. Lalu ke bandara Adi Sucipto dengan kondisi yang rame-rame karena libur Lebaran, lalu naik pesawat selama 2 jam dari Jogja ke Bali.
+			Akhirnya kita sampai ke Pulau Bali, tepatnya di <div class="tooltip">Kota Denpasar<span class="tooltiptext" id="desc003"></span></div> dengan kondisi yang selamat meskipun kondisinya ramai. Setelah itu, baru makan outdoor di dekat pantai, sebelum kita pesan hotel dan sempat foto-foto pemandangan di Bali (Gambar 5, 6).
             <!-- Lalu memesan hotel dekat pantai Kuta, dan makan malamnya dekat hotel. Lalu besoknya ke Pantai Kuta, dan kita naik kapal kecil ...<br> -->
             <!-- [Under Construction] -->
             <br><br><br>
@@ -406,7 +407,7 @@
 		<div id="imgdesc" style="color:white; text-align:center; padding-top:50px;"></div>
 	</div>
     <script src="script.js"></script>
-    <script src="blog-description.js"></script>
+    <!-- <script src="blog-description.js"></script> -->
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 7 Mei 2024<br> -->
