--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         <br><br>
         Font untuk heading sudah berubah dari <b>Raleway</b> ke <b>Inter</b>, dan menunya sudah diperbaiki dan diperlengkap, sehingga versinya berubah menjadi v1.7.4.
 		<br><br>
-		Di versi 1.9, saya menggunakan Google Search Console supaya bisa mencari website saya dengan lebih mudah. Selain itu, di versi 1.9.1, ada fitur tema gelap dan pencarian (search) Google yang baru. Di versi selanjutnya, saya memeratakan tampilan website yang baru dan melengkapinya dengan gambar transparan supaya lebih menarik, serta memperlengkap halaman blog.
+		Di versi 1.9, saya menggunakan Google Search Console supaya bisa mencari website saya dengan lebih mudah. Selain itu, di versi 1.9.1, ada fitur tema gelap dan pencarian (search) Google yang baru.
+		Di versi selanjutnya, saya memeratakan tampilan website yang baru, termasuk di tampilan mobile atau handphone (HP), dan melengkapinya dengan gambar transparan supaya lebih menarik, serta memperlengkap halaman blog.
 		<br><br>
 		Selain itu, saya menambahkan link halaman yang baru, yaitu halaman Help. Di sisi lain, saya juga menghapus link <b>Fakta</b> dan <b>Portofolio</b>, karena berbagai alasan sebagai berikut:<br>
 		- Fakta: Disatukan menjadi halaman Blog, sehingga halaman Fakta diarsipkan<br>
@@ -265,8 +266,8 @@
     <footer style="background-color:#404040; padding:10px; color:white">
         <!-- <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;"> -->
 		<p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 15 Desember 2025<br>
-        <span id="version">Version: 1.9.4</span><br>
+        Terakhir diupdate: 16 Desember 2025<br>
+        <span id="version">Version: 1.9.5</span><br>
         Copyright © 2025 by Devan
 		<!-- Terakhir diupdate: 30 Mei 2024<br>
         Version: 1.8.1<br>
