--- a/profil.html
+++ b/profil.html
@@ -31,38 +31,68 @@
 		<p>
         Inilah profil saya.
         </p><br>
-        <p class="heading color004" style="font-size:25px;"><b>Gambar</b></p>
+        <p class="heading color004" style="font-size:25px;">
+		    <b>Gambar</b>&nbsp;
+            <img class="imginvert" style="vertical-align:middle;" src="images/images-icon.png" alt="Images icon" width="30">
+		</p>
         <div class="image">
             <!-- <img src="images/IMG_20200105_121417.jpg" width="150" style="border: 2px solid black; border-radius: 50%;"> -->
             <img src="images/profile.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
             <img src="images/Gambar Profil.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
-        </div>
-        <p class="heading color004" style="font-size:25px;"><b>Biodata</b></p>
-        <p style="line-height:1.7;">
-        Nama: Devan Da**e* *<br>
-        Tanggal lahir: 0*/0*/200*<br>
-        Username: dev*ndan**l9<br>
-        Lokasi: Semarang
+        </div><br>
+		
+        <p class="heading color004" style="font-size:25px;">
+		    <b>Biodata</b>&nbsp;
+            <img class="imginvert" style="vertical-align:middle;" src="images/description-icon.png" alt="Description icon" width="30">
+		</p>
+        <p style="font-family:'Roboto Mono'; line-height:1.7;">
+        <!--
+		<p style="line-height:1.7;">
+		Nama: Devan Da**e* *<br>
+		Lokasi: Semarang
+		-->
+		<b>Nama Lengkap&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b> Devan Daniel ***<br>
+        <b>Tanggal lahir&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b> 0*/0*/200*<br>
+        <b>Tempat tinggal / Lokasi&nbsp;:</b> Semarang, Jawa Tengah, Indonesia<br>
+		<b>Username&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b> dev*ndani*l09<br><br>
+		<i>dan lain-lain...</i>
         </p><br>
-        <p class="heading color004" style="font-size:25px;"><b>Kesukaan</b></p>
-        <p>
-        Buka aplikasi VS Code<br>
-        Mengerjakan program<br>
-        Suka pelajaran Matematika dan Bahasa Inggris
+		
+        <p class="heading color004" style="font-size:25px;">
+		    <b>Kesukaan</b>&nbsp;
+            <img class="imginvert" style="vertical-align:middle;" src="images/like-icon.png" alt="Like icon" width="30">
+		</p>
+		<p>
+        Suka pelajaran Matematika, Coding, dan Bahasa Inggris<br>
+		Buka aplikasi VS Code<br>
+        Untuk mengerjakan program koding<br>
+		Terus berjuang dan tetap semangat untuk meraih masa depan yang baik dan sukses!
         </p><br>
-        <p class="heading color004" style="font-size:25px;"><b>Histori</b></p>
+		
+        <p class="heading color004" style="font-size:25px;">
+		    <b>History</b>&nbsp;
+            <img class="imginvert" style="vertical-align:middle;" src="images/history-icon.png" alt="Like icon" width="30">
+		</p>
+		<p>
+		<span class="color007">[Under Construction]</span>
+		</p>
 		<br>
-        <p class="heading color004" style="font-size:25px;"><b>Social Links</b></p>
+		
+        <p class="heading color004" style="font-size:25px;">
+		    <b>Social Links</b>&nbsp;
+            <img class="imginvert" style="vertical-align:middle;" src="images/link.png" alt="Like icon" width="30">
+		</p>
         <p>
             <!-- https://www.instagram.com/devandaniel09 -->
             Instagram: <img src="images/instagram-icon.png" width="20" style="vertical-align:bottom; padding:2px;">
-            <a class="link" href="https://www.instagram.com/devandaniel09">Devan - Instagram</a><br>
+            <a class="link" href="https://www.instagram.com/devandaniel09">Devan Daniel - Instagram</a><br>
             YouTube: <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">
-            <a class="link" href="https://www.youtube.com/channel/UCbSs7ZjkJD3MWKt_vWyMU4Q">Devan - Youtube</a>
+            <a class="link" href="https://www.youtube.com/channel/UCbSs7ZjkJD3MWKt_vWyMU4Q">Devan Daniel - Youtube</a>
             <!-- <br><br>
             Link beberapa teman/orang:<br>
             <a href="orang.html">Daftar Teman & Orang</a> -->
         </p><br>
+		
         <p class="heading color004" style="font-size:25px;"><b>Lihat juga / See also</b></p>
         <ul>
             <li><a class="link" href="portofolio.html">Portofolio Devan</a></li>
@@ -76,7 +106,7 @@
         <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 1 Okt 2023<br>
         Copyright © 2023 by Devan -->
-		Terakhir diupdate: 14 Desember 2025<br>
+		Terakhir diupdate: 16 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
